--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.4",
