--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-# MySQL. Versions 5.5.8 and up are supported.
+MySQL. Versions 5.5.8 and up are supported.
 #
 # Install the MySQL driver
 #   gem install mysql2
@@ -53,3 +53,6 @@ production:
   database: In_Short_production
   username: In_Short
   password: <%= ENV['IN_SHORT_DATABASE_PASSWORD'] %>
+  
+  #socket: /tmp/mysql.sock
+ 
