--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-MySQL. Versions 5.5.8 and up are supported.
+#MySQL. Versions 5.5.8 and up are supported.
 #
 # Install the MySQL driver
 #   gem install mysql2
@@ -12,7 +12,7 @@ MySQL. Versions 5.5.8 and up are supported.
 default: &default
   adapter: mysql2
   encoding: utf8mb4
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+    #pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: hm_hei
   password: OMLVmmheimgi23
   host: localhost
@@ -51,8 +51,7 @@ test:
 production:
   <<: *default
   database: In_Short_production
-  username: In_Short
-  password: <%= ENV['IN_SHORT_DATABASE_PASSWORD'] %>
-  
+  #username: In_Short
+  #password: <%= ENV['IN_SHORT_DATABASE_PASSWORD'] %> 
   #socket: /tmp/mysql.sock
  
